:ambulance: Non-Static inner-class commands now parse without synthetic arguments.